--- a/app/views/users/login.haml
+++ b/app/views/users/login.haml
@@ -1,28 +1,30 @@
 %main.container
   .row
-    %form.col.s12{action: '/login', method: 'post'}
-      .row
-        %h4.col.s12 Login to your account
-      .row
-        .input-field.col.s12.l6
-          - if session[:failed_name]
-            %input.validate#name{type: 'text', name: 'name', required: true, value: session[:failed_name]}
-          - else
-            %input.validate#name{type: 'text', name: 'name', required: true, autofocus: true}
-          %label{for: 'name'} Username
-        .input-field.col.s12.l6
-          - if locals.empty?
-            %input.validate#password{type: 'password', name: 'password', required: true}
-          - else
-            %input.validate#password{type: 'password', name: 'password', required: true, placeholder: message, autofocus: true}
-          %label{for: 'password'} Password
-      .row
-        .col.s4.push-s8
-          %button.btn.waves-effect.waves-light.right{type: 'submit'}
-            Login
-            %i.material-icons.right send
-        .col.s8.pull-s4
-          Dont have an account?
-          %a.waves-effect.waves-orange.btn-flat{href: '/signup'}
-            Create one!
-            %i.material-icons.right account_box
+    %h4.col.s12 Login to your account
+  .row
+    %ul.collection
+      %li.collection-item
+        %form{action: '/login', method: 'post'}
+          .row
+            .input-field.col.s12.l6
+              - if session[:failed_name]
+                %input.validate#name{type: 'text', name: 'name', required: true, value: session[:failed_name]}
+              - else
+                %input.validate#name{type: 'text', name: 'name', required: true, autofocus: true}
+              %label{for: 'name'} Username
+            .input-field.col.s12.l6
+              - if locals.empty?
+                %input.validate#password{type: 'password', name: 'password', required: true}
+              - else
+                %input.validate#password{type: 'password', name: 'password', required: true, placeholder: message, autofocus: true}
+              %label{for: 'password'} Password
+          .row
+            .col.s4.push-s8
+              %button.btn.waves-effect.waves-light.right{type: 'submit'}
+                Login
+                %i.material-icons.right send
+            .col.s8.pull-s4
+              Dont have an account?
+              %a.waves-effect.waves-orange.btn-flat{href: '/signup'}
+                Create one!
+                %i.material-icons.right account_box
