--- a/app/views/toast/topics/show.haml
+++ b/app/views/toast/topics/show.haml
@@ -2,8 +2,8 @@
   -# Topic Title
   .row
     %ul.topic.collection.z-depth-1
-      %li.collection-item.valign-wrapper
-        %ul.vote.center-align.valign
+      %li.collection-item
+        %ul.vote.center-align.inline-block
           %li<
             %form{action: "/toast-it/topics/#{@topic.id}/toast", method: 'post'}
               - if @liked
@@ -21,7 +21,7 @@
               - else
                 %button.waves-effect.waves-red.btn-flat{type: 'submit', name: 'liked', value: 'false'}
                   %i.fa.fa-beer.fa-flip-vertical
-        %ul.valign.topic
+        %ul.inline-block.topic-info
           %li
             %h5<
               - if @topic.link_topic
