--- a/app/assets/stylesheets/smacss/layout.css.scss
+++ b/app/assets/stylesheets/smacss/layout.css.scss
@@ -26,7 +26,7 @@ body {
         }
       }
     }
-    .topic.collection {
+    .topic.collection, #comments.collection {
       .collection-item {
         padding-right: 10px;
         padding-left: 10px;
@@ -47,12 +47,12 @@ body {
           margin-top: 25px;
           max-width: 50px;
         }
-        ul.topic-info {
+        ul.post-info {
           margin-left: 5px;
           .chip {
             white-space: nowrap;
           }
-          p.topic-metadata {
+          p.post-metadata {
             color: rgba(0, 0, 0, 0.6);
           }
         }
