Add edit route for topics

--- a/app/views/toast/index.haml
+++ b/app/views/toast/index.haml
@@ -90,4 +90,4 @@
                   %span.grey-text<>
                     &= "<deleted>"
   .row
-    %a.waves-effect.waves-light.btn.left{href: '/toast-it/topics/new'} Create a new topic
+    %a.waves-effect.waves-light.btn{href: '/toast-it/topics/new'} Create a new topic
