--- a/app/views/toast/topics/new.haml
+++ b/app/views/toast/topics/new.haml
@@ -11,6 +11,7 @@
               %a{href: '#link'} Link Topic
         .col.s12#text
           .row
+          .row
             %form.col.s12{action: '/toast-it/topics', method: 'post'}
               .row
                 .input-field.col.s12
@@ -25,6 +26,7 @@
                     Create Text Topic
                     %i.material-icons.right send
         .col.s12#link
+          .row
           .row
             %form.col.s12{action: '/toast-it/topics', method: 'post'}
               .row
