Use custom 404/400 pages

--- a/app/views/404.haml
+++ b/app/views/404.haml
@@ -1,2 +1,7 @@
-%h1 404
-%p Page not found
+%main.container.center-align
+  %h1< Error 404
+  %p.flow-text We could not find your request.
+  .row
+    %img.responsive-img.col.s12{src: '/img/404.jpg'}
+  .row
+    %a.waves-effect.waves-light.btn{href: '/toast-it'} Get Toasting!
