--- a/app/views/toast/topics/new.haml
+++ b/app/views/toast/topics/new.haml
@@ -15,10 +15,10 @@
             %form.col.s12{action: '/toast-it/topics', method: 'post'}
               .row
                 .input-field.col.s12
-                  %input.validate#title{type: 'text', name: 'title', required: true}
+                  %input.validate#title{type: 'text', name: 'topic[title]', required: true}
                   %label{for: 'title'} Topic Title
                 .input-field.col.s12
-                  %textarea.materialize-textarea#content{name: 'content', required: true}
+                  %textarea.materialize-textarea#content{name: 'topic[content]', required: true}
                   %label{for: 'content'} Topic Contents
               .row
                 .col.s12
@@ -31,13 +31,13 @@
             %form.col.s12{action: '/toast-it/topics', method: 'post'}
               .row
                 .input-field.col.s12
-                  %input.validate#title{type: 'text', name: 'title', required: true}
+                  %input.validate#title{type: 'text', name: 'topic[title]', required: true}
                   %label{for: 'title'} Topic Title
                 .input-field.col.s12
-                  %input.validate#content{type: 'url', name: 'content', required: true}
+                  %input.validate#content{type: 'url', name: 'topic[content]', required: true}
                   %label{for: 'content'} Topic URL
               .row
                 .col.s12
-                  %button.btn.waves-effect.waves-light.right{type: 'submit', name: 'link_topic', value: 'true'}
+                  %button.btn.waves-effect.waves-light.right{type: 'submit', name: 'topic[link_topic]', value: 'true'}
                     Create Link Topic
                     %i.material-icons.right send
