--- a/app/views/toast/topics/show.haml
+++ b/app/views/toast/topics/show.haml
@@ -100,7 +100,7 @@
                       %input#hidden{type: 'hidden', name: '_method', value: 'delete'}
                       Submitted #{comment.created_to_s} ago by&nbsp;
                       %a{href: "/users/#{comment.user.name}"}> #{comment.user.name}
-                      %a.waves-effect.waves-light.btn{href: "/toast-it/comments/#{comment.id}/edit"}
+                      %a.waves-effect.waves-light.btn{href: "/toast-it/comments/#{comment.id}"}
                         %i.material-icons edit
                       %button.btn-flat.waves-effect.waves-red.right{type: 'submit'}
                         %i.material-icons delete
