Add dependency for OpenWebIcons

--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -105,7 +105,8 @@
                 %a.grey-text.text-lighten-3{href: 'https://www.openshift.com/'} OpenShift
       .footer-copyright
         .container
-          © Copyright free / Public Domain
+          %i.openwebicons-cc-public
+          Copyright free / Public Domain
           %a.grey-text.text-lighten-4.right{href: 'https://github.com/thegands/toast-it'} GitHub
 
     = javascript_tag 'app'
