--- a/app/assets/stylesheets/smacss/layout.css.scss
+++ b/app/assets/stylesheets/smacss/layout.css.scss
@@ -5,7 +5,7 @@ body {
   main {
     flex: 1 0 auto;
     input {
-      &#password {
+      &#password, &#name {
         &::-webkit-input-placeholder {
           color: rgba(184, 1, 1, 0.4);
         }
